--- a/src/glide-window.ui
+++ b/src/glide-window.ui
@@ -415,6 +415,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="related_action">prev-slide-action</property>
                 <child>
                   <object class="GtkImage" id="prev-slide-image">
                     <property name="visible">True</property>
@@ -445,6 +446,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
+                <property name="related_action">next-slide-action</property>
                 <child>
                   <object class="GtkImage" id="next-slide-image">
                     <property name="visible">True</property>
@@ -548,12 +550,14 @@
     <property name="short_label">Previous Slide</property>
     <property name="tooltip">Sets the current slide to the previous slide.</property>
     <property name="icon_name">font-x-generic</property>
+    <signal name="activate" handler="glide_window_prev_slide_action_activate"/>
   </object>
   <object class="GtkAction" id="next-slide-action">
     <property name="label">Next Slide</property>
     <property name="short_label">Next Slide</property>
     <property name="tooltip">Sets the current slide to the next slide.</property>
     <property name="stock_id">gtk-go-forward</property>
+    <signal name="activate" handler="glide_window_next_slide_action_activate"/>
   </object>
   <object class="GtkAction" id="new-text-action">
     <property name="label">Insert Text</property>
