--- a/src/glide-window.ui
+++ b/src/glide-window.ui
@@ -21,8 +21,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="new-menuitem">
                         <property name="visible">True</property>
-                        <property name="related_action">new-action</property>
                         <property name="use_action_appearance">True</property>
+                        <property name="related_action">new-action</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <accelerator key="n" signal="activate" modifiers="GDK_CONTROL_MASK"/>
@@ -164,8 +164,8 @@
             <child>
               <object class="GtkToolButton" id="new-toolbutton">
                 <property name="visible">True</property>
-                <property name="related_action">new-action</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">new-action</property>
                 <property name="label" translatable="yes">New File</property>
                 <property name="use_underline">True</property>
               </object>
@@ -177,8 +177,8 @@
             <child>
               <object class="GtkToolButton" id="open-toolbutton">
                 <property name="visible">True</property>
-                <property name="related_action">open-action</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">open-action</property>
                 <property name="label" translatable="yes">Open File</property>
                 <property name="use_underline">True</property>
               </object>
@@ -190,8 +190,8 @@
             <child>
               <object class="GtkToolButton" id="save-toolbutton">
                 <property name="visible">True</property>
-                <property name="related_action">save-action</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">save-action</property>
                 <property name="label" translatable="yes">Save File</property>
                 <property name="use_underline">True</property>
               </object>
@@ -213,8 +213,8 @@
               <object class="GtkToolButton" id="text-toolbutton">
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
-                <property name="related_action">new-text-action</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">new-text-action</property>
                 <property name="label" translatable="yes">Text</property>
                 <property name="use_underline">True</property>
               </object>
@@ -227,8 +227,8 @@
               <object class="GtkToolButton" id="image-toolbutton">
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
-                <property name="related_action">new-image-action</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">new-image-action</property>
                 <property name="label" translatable="yes">Image</property>
                 <property name="use_underline">True</property>
               </object>
@@ -358,8 +358,8 @@
             <child>
               <object class="GtkToolButton" id="background-toolbutton">
                 <property name="visible">True</property>
-                <property name="related_action">background-action</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">background-action</property>
                 <property name="label" translatable="yes">Set Background</property>
                 <property name="use_underline">True</property>
               </object>
@@ -371,8 +371,8 @@
             <child>
               <object class="GtkToolButton" id="present-toolbutton">
                 <property name="visible">True</property>
-                <property name="related_action">present-action</property>
                 <property name="use_action_appearance">True</property>
+                <property name="related_action">present-action</property>
                 <property name="label" translatable="yes">Present</property>
                 <property name="use_underline">True</property>
               </object>
@@ -472,6 +472,7 @@
             <child>
               <object class="GtkComboBox" id="animation-combobox">
                 <property name="visible">True</property>
+                <signal name="changed" handler="glide_window_animations_box_changed_cb"/>
               </object>
               <packing>
                 <property name="padding">38</property>
