--- a/src/glide-window.ui
+++ b/src/glide-window.ui
@@ -91,15 +91,16 @@
                         <property name="related_action">cut-action</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <accelerator key="x" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                     <child>
                       <object class="GtkImageMenuItem" id="copy-menuitem">
-                        <property name="label">gtk-copy</property>
                         <property name="visible">True</property>
+                        <property name="use_action_appearance">True</property>
                         <property name="related_action">copy-action</property>
-                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <accelerator key="c" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                     <child>
@@ -109,6 +110,7 @@
                         <property name="related_action">paste-action</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <accelerator key="v" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                       </object>
                     </child>
                     <child>
@@ -118,6 +120,7 @@
                         <property name="related_action">delete-action</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <accelerator key="Delete" signal="activate"/>
                       </object>
                     </child>
                   </object>
