--- a/src/glide-window.ui
+++ b/src/glide-window.ui
@@ -471,6 +471,25 @@
               </packing>
             </child>
             <child>
+              <object class="GtkButton" id="remove-slide-button">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="related_action">remove-slide-action</property>
+                <child>
+                  <object class="GtkImage" id="remove-slide-image">
+                    <property name="visible">True</property>
+                    <property name="stock">gtk-remove</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">4</property>
+              </packing>
+            </child>
+            <child>
               <object class="GtkComboBox" id="animation-combobox">
                 <property name="visible">True</property>
                 <property name="sensitive">False</property>
@@ -478,7 +497,7 @@
               </object>
               <packing>
                 <property name="padding">38</property>
-                <property name="position">4</property>
+                <property name="position">5</property>
               </packing>
             </child>
           </object>
@@ -635,5 +654,13 @@
     <property name="icon_name">x-office-presentation</property>
     <property name="sensitive">False</property>
     <signal name="activate" handler="glide_window_background_action_activate"/>
+  </object>
+  <object class="GtkAction" id="remove-slide-action">
+    <property name="label">Remove Slide</property>
+    <property name="short_label">Remove Slide</property>
+    <property name="tooltip">Deletes the current slide from the presentation.</property>
+    <property name="stock_id">gtk-orientation-reverse-landscape</property>
+    <property name="sensitive">False</property>
+    <signal name="activate" handler="glide_window_remove_slide_action_activate"/>
   </object>
 </interface>
