Implement button sensitivity and UI labels for undo and redo

--- a/src/glide-window.ui
+++ b/src/glide-window.ui
@@ -110,8 +110,8 @@
                     <child>
                       <object class="GtkImageMenuItem" id="redo-menuitem">
                         <property name="visible">True</property>
+                        <property name="use_action_appearance">True</property>
                         <property name="related_action">redo-action</property>
-                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <accelerator key="z" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                       </object>
@@ -748,6 +748,7 @@
     <property name="short_label">Undo</property>
     <property name="tooltip">Undo the last action</property>
     <property name="stock_id">gtk-undo</property>
+    <property name="sensitive">False</property>
     <signal name="activate" handler="glide_window_undo_action_activate"/>
   </object>
   <object class="GtkAction" id="redo-action">
@@ -755,6 +756,7 @@
     <property name="short_label">Redo</property>
     <property name="tooltip">Redo the last undo.</property>
     <property name="stock_id">gtk-redo</property>
+    <property name="sensitive">False</property>
     <signal name="activate" handler="glide_window_redo_action_activate"/>
   </object>
 </interface>
