--- a/data/ui/glide-window.ui
+++ b/data/ui/glide-window.ui
@@ -112,6 +112,7 @@
                         <property name="visible">True</property>
                         <property name="use_action_appearance">True</property>
                         <property name="related_action">redo-action</property>
+                        <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
                         <accelerator key="z" signal="activate" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
                       </object>
@@ -657,6 +658,7 @@
     <property name="short_label">About Glide...</property>
     <property name="tooltip">Displays the Glide about dialog.</property>
     <property name="stock_id">gtk-about</property>
+    <signal name="activate" handler="glide_window_about_action_activate"/>
   </object>
   <object class="GtkAction" id="add-slide-action">
     <property name="label">Add Slide</property>
@@ -758,5 +760,39 @@
     <property name="stock_id">gtk-redo</property>
     <property name="sensitive">False</property>
     <signal name="activate" handler="glide_window_redo_action_activate"/>
+  </object>
+  <object class="GtkAboutDialog" id="about-dialog">
+    <property name="border_width">5</property>
+    <property name="type_hint">normal</property>
+    <property name="has_separator">False</property>
+    <property name="program_name">Glide </property>
+    <property name="version">0.1</property>
+    <property name="comments" translatable="yes">Presentations for GNOME</property>
+    <property name="authors">
+</property>
+    <property name="logo_icon_name">glide</property>
+    <signal name="close" handler="glide_window_hide_about_dialog"/>
+    <signal name="response" handler="glide_window_hide_about_dialog"/>
+    <child internal-child="vbox">
+      <object class="GtkVBox" id="dialog-vbox1">
+        <property name="visible">True</property>
+        <property name="orientation">vertical</property>
+        <property name="spacing">2</property>
+        <child>
+          <placeholder/>
+        </child>
+        <child internal-child="action_area">
+          <object class="GtkHButtonBox" id="dialog-action_area1">
+            <property name="visible">True</property>
+            <property name="layout_style">end</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
+          </packing>
+        </child>
+      </object>
+    </child>
   </object>
 </interface>
