--- a/data/ui/glide-window.ui
+++ b/data/ui/glide-window.ui
@@ -3,6 +3,7 @@
   <requires lib="gtk+" version="2.16"/>
   <!-- interface-naming-policy project-wide -->
   <object class="GtkWindow" id="window1">
+    <signal name="delete_event" handler="glide_window_delete_event_cb"/>
     <child>
       <object class="GtkVBox" id="main-vbox">
         <property name="visible">True</property>
